  * Added function lib.mdamath.make_whole to "unbreak" molecules
    over periodic boundaries.
  * Added triclinic_dimensions to Timestep, returns representation of unit
    cell as triclinic vectors (Issue #276)
  * Added setter to bfactors property (Issue #372)
  * Added AtomGroup altLocs and serials properties with setters. (Issue #372)

  Changes
  * Changed AtomGroup counting methods to properties with different
    names: numberOfAtoms() to n_atoms, numberOfResidues() to
    n_residues, numberOfSegments() --> n_segments (Issue #376)
  * Changed trajectory reader numframes to n_frames (Issue #376)
  * Changed Timestep.numatoms to n_atoms (Issue #376)
  * Deprecated the use of the 'fullgroup' selection keyword (Issue #268)
  * Changed atom.number attribute to atom.index (Issue #372)
  * Changed many AtomGroup methods to properties.  These are: indices, masses,
    charges, names, types, radii, resids, resnames, resnums, segids
    (Issue #372)
  * A ProtoReader class intermediate between IObase and Reader was added so
    specific Readers can be subclassed without __del__ (the ChainReader and
    SingleFrameReader), thus preventing memleaks (Issue #312).
  * Atoms (and all container classes thereof) are now bound to Universes
    only via weakrefs. If Universes are not explicitly kept in scope Atoms
    will become orphaned.
  * Timestep can now only init using an integer argument (which
    represents the number of atoms)
  * Added from_timestep and from_coordinates construction methods
    to base.Timestep
  * Removed FormatError, now replaced by ValueError
  * Removed KDTree and CoordinateNeighbor from MDAnalaysis. If you
    want to search in cartesian coordinates directly for nighboring
    points use the BioPython KDTree or scikit-learn Neighbors module.
    The AtomNeighborSearch class has been ported to use the BioPython
    KDTree and is now located in MDAnalaysis.lib.NeighborSearch.
    MDAnalaysis.KDTree still exists in this version so load the