@@ -201,3 +201,41 @@ class TestMerge(TestCase):
         b = AtomGroup([])
 
         assert_raises(ValueError, Merge, a, b)
+
+class TestMergeTopology(object):
+    """Test that Merge correct does topology"""
+    def setUp(self):
+        self.u = MDAnalysis.Universe(PSF, DCD)
+
+    def tearDown(self):
+        del self.u
+
+    def test_merge_with_topology(self):
+        ag1 = self.u.atoms[:20]
+        ag2 = self.u.atoms[100:110]
+
+        u2 = MDAnalysis.Merge(ag1, ag2)
+
+        assert_(len(u2.atoms) == 30)
+        assert_(len(u2.bonds) == 28)
+        assert_(len(u2.angles) == 47)
+        assert_(len(u2.dihedrals) == 53)
+        assert_(len(u2.impropers) == 1)
+
+        # All these bonds are in the merged Universe
+        assert_(len(ag1[0].bonds) == len(u2.atoms[0].bonds))
+        # One of these bonds isn't in the merged Universe
+        assert_(len(ag2[0].bonds) -1 == len(u2.atoms[20].bonds))
+
+    def test_merge_without_topology(self):
+        # This shouldn't have topology as we merged single atoms
+        ag1 = AtomGroup([self.u.atoms[1]])
+        ag2 = AtomGroup([self.u.atoms[10]])
+        
+        u2 = MDAnalysis.Merge(ag1, ag2)
+
+        assert_(len(u2.atoms) == 2)
+        assert_(len(u2.bonds) == 0)
+        assert_(len(u2.angles) == 0)
+        assert_(len(u2.dihedrals) == 0)
+        assert_(len(u2.impropers) == 0)
